<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Salesforce Admin 2 Go</string>

    <!--  loading screen -->
    <string name="boot_1">Salesforce Admin 2 Go</string>
    <string name="boot_2">Authenticating</string>
    <string name="boot_3">Please wait...</string>
    <string name="auth_failed">authentication failed : %s</string>

    <!-- login menu -->
    <string name="login_prod">Login to production</string>
    <string name="login_test">Login to sandbox</string>
	<string name="login_title">Salesforce Admin 2 Go : %s</string>
	<string name="login_prod_name">Production</string>
	<string name="login_test_name">Sandbox</string>

	<!--  list view -->
	<string name="loading">Loading ...</string>
	<string name="no_results">No users found</string>
	<string name="search_hint">Search by name</string>
	<string name="list_recent">Recent users</string>
	<string name="list_search_results">Search results</string>

	<!--  detail view -->
	<string name="user_title">Title</string>
	<string name="user_username">Username</string>

	<string name="contact_header">Contact</string>
	<string name="contact_phone">Phone</string>
	<string name="contact_mobile">Mobile (Call)</string>
	<string name="contact_mobile_text">Mobile (Text)</string>
	<string name="contact_email">Email</string>

	<string name="action_header">Actions</string>
	<string name="api_failed">Api error: %s</string>
	<string name="reset_pwd">Reset Password</string>
	<string name="password_was_reset">Password reset complete</string>
	<string name="enabled">Is Active</string>
	<string name="active_updated">Active state updated</string>
	
	<string name="clone_user">Clone user</string>

	<!--  clone -->
	<string name="clone_username">New username</string>
	<string name="clone_firstname">First name</string>
	<string name="clone_lastname">Last name</string>
	<string name="clone_email">Email</string>
	<string name="clone_create">Create User</string>
	<string name="clone_done">Successfully cloned user</string>
	<string name="clone_validation_err">Must supply new username, Last name and email address</string>

	<!-- list menu -->
	<string name="logout">Logout</string>
</resources>
