<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:background="@drawable/row_background"
	android:padding="5dp"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:text="@string/clone_username" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
		
	<EditText android:id="@+id/clone_username" 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" />


	<TextView android:text="@string/clone_firstname" 
		android:layout_marginTop="3dp"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
		
	<EditText android:id="@+id/clone_firstname" 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" />


	<TextView android:text="@string/clone_lastname" 
		android:layout_marginTop="3dp"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
		
	<EditText android:id="@+id/clone_lastname" 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" />


	<TextView android:text="@string/clone_email" 
		android:layout_marginTop="3dp"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
		
	<EditText android:id="@+id/clone_email" 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" />


	<RelativeLayout 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		
		<Button
			android:text="@string/clone_create"
			android:id="@+id/create_user_button"
			android:onClick="createUserClicked"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"/>
	</RelativeLayout>
</LinearLayout>
